# east_end_effectors_ee26

./: .gitignore  CLAUDE.md  CONTRACT.md  DATA_COLLECTION.md  Industrial_Project.tex  LICENSE  PLAN.md  README.md  launch_gpu_check.py  launch_gpu_job.py  requirements-launch.txt
.github/workflows/: ci.yml
challenge2/: .coveragerc  README.md  requirements-ci.txt  ruff.toml  train_ball_net.py
challenge2/src/: ball_net.py  ball_tracker_nn.py  calibration.py  controller.py  loop.py  plate_command.py  tracker.py
challenge2/tests/: test_ball_net.py  test_c2.py  test_c2_coverage.py
plans/: PLAN_DESKTOP.md  PLAN_OFFROBOT.md
robot/c1_vision/: .gitignore  README.md  detect.py  realsense_capture.py
robot/c1_vision/tests/: test_detect.py
robot/docs/: C1_DESKTOP_RUNBOOK.md  KEYBOARD_TELEOP.md  QUEST3_CONNECTION.md  QUEST3_REAL_TESTING.md  QUEST_WIRED_SETUP.md
robot/franka-sanity-checks/: CMakeLists.txt  INSTALL.md  README.md  rehome.sh
robot/franka-sanity-checks/src/: main.cpp  move_to_home.cpp
robot/franka_xr_teleop/: DATA_COLLECTION.md  DEPLOY.md  DEPLOY_GPU_HOST.md  LEROBOT_VENV_SETUP.md  README.md
robot/franka_xr_teleop/configs/: data_collection.yaml  robot.yaml  teleop.yaml
robot/franka_xr_teleop/schemas/: robot_observation.schema.json
robot/franka_xr_teleop/tools/: live_camera_view.py  live_teleop_debug.py  plot_policy_action_log.py  process_recording.sh  record_data_collection_session.py  record_realsense_camera.py  record_robot_observations.py  reset_cameras.py  run_vla_policy.py  split_session_episodes.py  start_collection_session.sh  start_policy_deploy.sh  teleop_keyboard.py  test_deploy_paths.py  test_split_session_episodes.py  test_teleop_keyboard.py
robot/operator_console/: README.md  __init__.py  app.py  cameras.py  requirements.txt  run_console.sh  telemetry.py
robot/operator_console/static/: console.css  console.js
robot/operator_console/templates/: console.html
robot/operator_console/tests/: conftest.py  test_app.py  (+2 more)
sagemaker_gpu_check/: gpu_check.py
training/: TASK_C1.md  main.py  requirements.txt
training/scripts/: plot_loss_curve.py
training/tests/: test_bench_openvino.py  test_eta.py  test_openvino_runner.py  test_training_configs.py
(+26 files in other folders)
