cmake_minimum_required(VERSION 3.16)
project(panda_libfranka_sanity LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(Franka CONFIG QUIET)
set(USE_PKGCONFIG_FRANKA OFF)
if(NOT Franka_FOUND)
  find_package(PkgConfig REQUIRED)
  pkg_check_modules(FRANKA QUIET franka)
  if(NOT FRANKA_FOUND)
    pkg_check_modules(FRANKA QUIET libfranka)
  endif()
  if(NOT FRANKA_FOUND)
    message(FATAL_ERROR
            "libfranka not found. Install libfranka 0.9.2 (or >=0.9.1,<0.10.0) and set "
            "Franka_DIR/CMAKE_PREFIX_PATH or pkg-config paths.")
  endif()
  set(USE_PKGCONFIG_FRANKA ON)
endif()

add_executable(panda_libfranka_sanity src/main.cpp)
add_executable(move_to_home src/move_to_home.cpp)

if(NOT USE_PKGCONFIG_FRANKA)
  if(DEFINED Franka_VERSION)
    if(Franka_VERSION VERSION_LESS 0.9.1 OR Franka_VERSION VERSION_GREATER_EQUAL 0.10.0)
      message(FATAL_ERROR
              "Unsupported libfranka version ${Franka_VERSION}. Expected >=0.9.1 and <0.10.0.")
    endif()
  endif()
endif()

function(link_franka tgt)
  if(TARGET Franka::Franka)
    target_link_libraries(${tgt} PRIVATE Franka::Franka)
  elseif(TARGET franka::franka)
    target_link_libraries(${tgt} PRIVATE franka::franka)
  elseif(TARGET franka)
    target_link_libraries(${tgt} PRIVATE franka)
  elseif(USE_PKGCONFIG_FRANKA)
    target_include_directories(${tgt} PRIVATE ${FRANKA_INCLUDE_DIRS})
    target_link_directories(${tgt} PRIVATE ${FRANKA_LIBRARY_DIRS})
    target_link_libraries(${tgt} PRIVATE ${FRANKA_LIBRARIES})
    target_compile_options(${tgt} PRIVATE ${FRANKA_CFLAGS_OTHER})
    if(DEFINED FRANKA_VERSION)
      if(FRANKA_VERSION VERSION_LESS 0.9.1 OR FRANKA_VERSION VERSION_GREATER_EQUAL 0.10.0)
        message(FATAL_ERROR
                "Unsupported libfranka version ${FRANKA_VERSION}. Expected >=0.9.1 and <0.10.0.")
      endif()
    endif()
  else()
    message(FATAL_ERROR "Could not find a known libfranka CMake target.")
  endif()
endfunction()

link_franka(panda_libfranka_sanity)
link_franka(move_to_home)
